# quartermaster

./: Dockerfile  README.md  angular.json  deploy  karma.conf.js  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  Cross.toml  config.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs
src/app/: app.component.html  app.component.spec.ts  app.component.ts
src/app/core/: core.module.ts
src/app/core/all-terrain-music-vehicle/: all-terrain-music-vehicle.component.html  all-terrain-music-vehicle.component.scss  all-terrain-music-vehicle.component.spec.ts  all-terrain-music-vehicle.component.ts
src/app/core/file-embed/: file-embed.component.html  file-embed.component.spec.ts  file-embed.component.ts
src/app/core/models/: playlist.ts
src/app/core/spotify-embed/: spotify-embed.component.html  spotify-embed.component.spec.ts  spotify-embed.component.ts
src/app/core/youtube-embed/: youtube-embed.component.html  youtube-embed.component.scss  youtube-embed.component.ts
